--- a/deploy/docker/config.yml
+++ b/deploy/docker/config.yml
@@ -10,7 +10,7 @@ app:
 
 # Default LLM Configuration
 llm:
-  provider: "openai/gpt-4o-mini"
+  provider: "azure/gpt4mini"
   api_key_env: "OPENAI_API_KEY"
   # api_key: sk-...  # If you pass the API key directly then api_key_env will be ignored
 
